fix css overflow in manage menu page

--- a/src/styles/Admin.Form.module.css
+++ b/src/styles/Admin.Form.module.css
@@ -2,7 +2,8 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  align-items: center;
+  overflow-y: auto;
+  /* align-items: center; */
   justify-content: center;  
 }
 .formContainerTips{
